Display summary of paid reviews per game Extend Steam review data to include whether a review is paid or not Header combines meta + review data to compose data Code is messy though :/

--- a/web/main.css
+++ b/web/main.css
@@ -7,7 +7,7 @@ body {
   background: #ddd;
 }
 
-.header, .data-container {
+.header, .data-container, .full-width-container {
   text-align: center;
   background: white;
   border: 10px solid #eee;
