--- a/web/main.css
+++ b/web/main.css
@@ -1,16 +1,17 @@
 * {
   box-sizing: border-box;
+  color: white;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  background: #ddd;
+  background: black;
 }
 
 .header, .data-container, .full-width-container {
   text-align: center;
-  background: white;
-  border: 10px solid #eee;
+  background: black;
+  border: 10px solid #224;
   max-width: 100%;
 }
 
@@ -35,7 +36,7 @@ body {
 }
 
 .review-score-positive {
-  color: blue;
+  color: cornflowerblue;
 }
 
 .review-score-negative {
